// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown Should render correctly 1`] = `
<DropdownComponent>
  <Dropdown
    onChange={[MockFunction]}
    options={
      Array [
        Object {
          "label": "Dropdown label 1",
          "value": "Dropdown value 1",
        },
        Object {
          "label": "Dropdown label 2",
          "value": "Dropdown value 2",
        },
        Object {
          "label": "Dropdown label 3",
          "value": "Dropdown value 3",
        },
      ]
    }
    placeholder="Dropdown placeholder"
    value={null}
  >
    <div
      className="plugin-dropdown undefined position-relative "
    >
      <div
        className="plugin-dropdown__field d-flex align-items-center justify-content-between
                    padding-h-15 border-radius-4 cursor-pointer
                    false
                    undefined
                    "
      >
        <label
          className="plugin-dropdown__field-text plugin-dropdown__field-placeholder margin-0 wt-400 null"
        >
          Dropdown placeholder
        </label>
        <i
          className="fa fa-angle-down plugin-dropdown__field-angle font-20 false"
        />
        <input
          checked={false}
          className="plugin-dropdown__field-input cursor-pointer"
          onChange={[Function]}
          type="checkbox"
        />
      </div>
      <ul
        className="plugin-dropdown__options-list channel-bg padding-0 border-radius-4 false"
      >
        <li
          className="plugin-dropdown__option-item text-ellipsis font-14 margin-0 padding-v-10 padding-h-25 cursor-pointer"
          key="Dropdown value 1"
          onClick={[Function]}
        >
          Dropdown label 1
        </li>
        <li
          className="plugin-dropdown__option-item text-ellipsis font-14 margin-0 padding-v-10 padding-h-25 cursor-pointer"
          key="Dropdown value 2"
          onClick={[Function]}
        >
          Dropdown label 2
        </li>
        <li
          className="plugin-dropdown__option-item text-ellipsis font-14 margin-0 padding-v-10 padding-h-25 cursor-pointer"
          key="Dropdown value 3"
          onClick={[Function]}
        >
          Dropdown label 3
        </li>
      </ul>
    </div>
  </Dropdown>
</DropdownComponent>
`;

exports[`Dropdown Should render the customOption correctly 1`] = `
<DropdownComponent
  customOption={
    Object {
      "label": "Custom option label",
      "onClick": [MockFunction] {
        "calls": Array [
          Array [
            "Custom option value",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "value": "Custom option value",
    }
  }
>
  <Dropdown
    customOption={
      Object {
        "label": "Custom option label",
        "onClick": [MockFunction] {
          "calls": Array [
            Array [
              "Custom option value",
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        },
        "value": "Custom option value",
      }
    }
    onChange={
      [MockFunction] {
        "calls": Array [
          Array [
            "Custom option value",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    options={
      Array [
        Object {
          "label": "Dropdown label 1",
          "value": "Dropdown value 1",
        },
        Object {
          "label": "Dropdown label 2",
          "value": "Dropdown value 2",
        },
        Object {
          "label": "Dropdown label 3",
          "value": "Dropdown value 3",
        },
      ]
    }
    placeholder="Dropdown placeholder"
    value={null}
  >
    <div
      className="plugin-dropdown undefined position-relative "
    >
      <div
        className="plugin-dropdown__field d-flex align-items-center justify-content-between
                    padding-h-15 border-radius-4 cursor-pointer
                    false
                    undefined
                    "
      >
        <label
          className="plugin-dropdown__field-text plugin-dropdown__field-placeholder margin-0 wt-400 null"
        >
          Dropdown placeholder
        </label>
        <i
          className="fa fa-angle-down plugin-dropdown__field-angle font-20 false"
        />
        <input
          checked={false}
          className="plugin-dropdown__field-input cursor-pointer"
          onChange={[Function]}
          type="checkbox"
        />
      </div>
      <ul
        className="plugin-dropdown__options-list channel-bg padding-0 border-radius-4 false"
      >
        <li
          className="plugin-dropdown__option-item text-ellipsis font-14 margin-0 padding-v-10 padding-h-25 cursor-pointer"
          key="Dropdown value 1"
          onClick={[Function]}
        >
          Dropdown label 1
        </li>
        <li
          className="plugin-dropdown__option-item text-ellipsis font-14 margin-0 padding-v-10 padding-h-25 cursor-pointer"
          key="Dropdown value 2"
          onClick={[Function]}
        >
          Dropdown label 2
        </li>
        <li
          className="plugin-dropdown__option-item text-ellipsis font-14 margin-0 padding-v-10 padding-h-25 cursor-pointer"
          key="Dropdown value 3"
          onClick={[Function]}
        >
          Dropdown label 3
        </li>
        <li
          className="plugin-dropdown__option-item plugin-dropdown__custom-option text-ellipsis"
          onClick={[Function]}
        >
          Custom option label
        </li>
      </ul>
    </div>
  </Dropdown>
</DropdownComponent>
`;

exports[`Dropdown Should show the empty state when "options" are empty 1`] = `
<DropdownComponent
  provideOptions={false}
>
  <Dropdown
    onChange={[MockFunction]}
    options={Array []}
    placeholder="Dropdown placeholder"
    value={null}
  >
    <div
      className="plugin-dropdown undefined position-relative "
    >
      <div
        className="plugin-dropdown__field d-flex align-items-center justify-content-between
                    padding-h-15 border-radius-4 cursor-pointer
                    plugin-dropdown__field--open
                    undefined
                    "
      >
        <label
          className="plugin-dropdown__field-text plugin-dropdown__field-placeholder margin-0 wt-400 null"
        >
          Dropdown placeholder
        </label>
        <i
          className="fa fa-angle-down plugin-dropdown__field-angle font-20 plugin-dropdown__field-angle--rotated"
        />
        <input
          checked={true}
          className="plugin-dropdown__field-input cursor-pointer"
          onChange={[Function]}
          type="checkbox"
        />
      </div>
      <ul
        className="plugin-dropdown__options-list channel-bg padding-0 border-radius-4 plugin-dropdown__options-list--open"
      >
        <li
          className="plugin-dropdown__option-item text-ellipsis"
        >
          Nothing to show
        </li>
      </ul>
    </div>
  </Dropdown>
</DropdownComponent>
`;

exports[`Dropdown Should show the error message when "error" prop is passed 1`] = `
<DropdownComponent
  error="Error Message"
>
  <Dropdown
    error="Error Message"
    onChange={[MockFunction]}
    options={
      Array [
        Object {
          "label": "Dropdown label 1",
          "value": "Dropdown value 1",
        },
        Object {
          "label": "Dropdown label 2",
          "value": "Dropdown value 2",
        },
        Object {
          "label": "Dropdown label 3",
          "value": "Dropdown value 3",
        },
      ]
    }
    placeholder="Dropdown placeholder"
    value={null}
  >
    <div
      className="plugin-dropdown plugin-dropdown--error position-relative "
    >
      <div
        className="plugin-dropdown__field d-flex align-items-center justify-content-between
                    padding-h-15 border-radius-4 cursor-pointer
                    false
                    undefined
                    "
      >
        <label
          className="plugin-dropdown__field-text plugin-dropdown__field-placeholder margin-0 wt-400 null"
        >
          Dropdown placeholder
        </label>
        <i
          className="fa fa-angle-down plugin-dropdown__field-angle font-20 false"
        />
        <input
          checked={false}
          className="plugin-dropdown__field-input cursor-pointer"
          onChange={[Function]}
          type="checkbox"
        />
      </div>
      <ul
        className="plugin-dropdown__options-list channel-bg padding-0 border-radius-4 false"
      >
        <li
          className="plugin-dropdown__option-item text-ellipsis font-14 margin-0 padding-v-10 padding-h-25 cursor-pointer"
          key="Dropdown value 1"
          onClick={[Function]}
        >
          Dropdown label 1
        </li>
        <li
          className="plugin-dropdown__option-item text-ellipsis font-14 margin-0 padding-v-10 padding-h-25 cursor-pointer"
          key="Dropdown value 2"
          onClick={[Function]}
        >
          Dropdown label 2
        </li>
        <li
          className="plugin-dropdown__option-item text-ellipsis font-14 margin-0 padding-v-10 padding-h-25 cursor-pointer"
          key="Dropdown value 3"
          onClick={[Function]}
        >
          Dropdown label 3
        </li>
      </ul>
      <p
        className="plugin-dropdown__err-text font-14 margin-top-5 error-text"
      >
        Error Message
      </p>
    </div>
  </Dropdown>
</DropdownComponent>
`;

exports[`Dropdown Should show the loader when "loadingOptions" prop is passed 1`] = `
<DropdownComponent
  loadingOptions={true}
>
  <Dropdown
    loadingOptions={true}
    onChange={[MockFunction]}
    options={
      Array [
        Object {
          "label": "Dropdown label 1",
          "value": "Dropdown value 1",
        },
        Object {
          "label": "Dropdown label 2",
          "value": "Dropdown value 2",
        },
        Object {
          "label": "Dropdown label 3",
          "value": "Dropdown value 3",
        },
      ]
    }
    placeholder="Dropdown placeholder"
    value={null}
  >
    <div
      className="plugin-dropdown undefined position-relative "
    >
      <div
        className="plugin-dropdown__field d-flex align-items-center justify-content-between
                    padding-h-15 border-radius-4 cursor-pointer
                    false
                    undefined
                    "
      >
        <label
          className="plugin-dropdown__field-text plugin-dropdown__field-placeholder margin-0 wt-400 null"
        >
          Dropdown placeholder
        </label>
        <div
          className="plugin-dropdown__loader"
        />
        <input
          checked={false}
          className="plugin-dropdown__field-input cursor-pointer"
          onChange={[Function]}
          type="checkbox"
        />
      </div>
      <ul
        className="plugin-dropdown__options-list channel-bg padding-0 border-radius-4 false"
      >
        <li
          className="plugin-dropdown__option-item text-ellipsis font-14 margin-0 padding-v-10 padding-h-25 cursor-pointer"
          key="Dropdown value 1"
          onClick={[Function]}
        >
          Dropdown label 1
        </li>
        <li
          className="plugin-dropdown__option-item text-ellipsis font-14 margin-0 padding-v-10 padding-h-25 cursor-pointer"
          key="Dropdown value 2"
          onClick={[Function]}
        >
          Dropdown label 2
        </li>
        <li
          className="plugin-dropdown__option-item text-ellipsis font-14 margin-0 padding-v-10 padding-h-25 cursor-pointer"
          key="Dropdown value 3"
          onClick={[Function]}
        >
          Dropdown label 3
        </li>
      </ul>
    </div>
  </Dropdown>
</DropdownComponent>
`;

exports[`Dropdown Should toggle showing the options when clicked 1`] = `
<DropdownComponent>
  <Dropdown
    onChange={[MockFunction]}
    options={
      Array [
        Object {
          "label": "Dropdown label 1",
          "value": "Dropdown value 1",
        },
        Object {
          "label": "Dropdown label 2",
          "value": "Dropdown value 2",
        },
        Object {
          "label": "Dropdown label 3",
          "value": "Dropdown value 3",
        },
      ]
    }
    placeholder="Dropdown placeholder"
    value={null}
  >
    <div
      className="plugin-dropdown undefined position-relative "
    >
      <div
        className="plugin-dropdown__field d-flex align-items-center justify-content-between
                    padding-h-15 border-radius-4 cursor-pointer
                    plugin-dropdown__field--open
                    undefined
                    "
      >
        <label
          className="plugin-dropdown__field-text plugin-dropdown__field-placeholder margin-0 wt-400 null"
        >
          Dropdown placeholder
        </label>
        <i
          className="fa fa-angle-down plugin-dropdown__field-angle font-20 plugin-dropdown__field-angle--rotated"
        />
        <input
          checked={true}
          className="plugin-dropdown__field-input cursor-pointer"
          onChange={[Function]}
          type="checkbox"
        />
      </div>
      <ul
        className="plugin-dropdown__options-list channel-bg padding-0 border-radius-4 plugin-dropdown__options-list--open"
      >
        <li
          className="plugin-dropdown__option-item text-ellipsis font-14 margin-0 padding-v-10 padding-h-25 cursor-pointer"
          key="Dropdown value 1"
          onClick={[Function]}
        >
          Dropdown label 1
        </li>
        <li
          className="plugin-dropdown__option-item text-ellipsis font-14 margin-0 padding-v-10 padding-h-25 cursor-pointer"
          key="Dropdown value 2"
          onClick={[Function]}
        >
          Dropdown label 2
        </li>
        <li
          className="plugin-dropdown__option-item text-ellipsis font-14 margin-0 padding-v-10 padding-h-25 cursor-pointer"
          key="Dropdown value 3"
          onClick={[Function]}
        >
          Dropdown label 3
        </li>
      </ul>
    </div>
  </Dropdown>
</DropdownComponent>
`;
